--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@a44583b/styles.css"> -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@919ee90/styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet"/>
@@ -121,7 +121,7 @@ type="text/css"
 <script src="https://d3js.org/d3.v5.js"></script>
 <script type="text/javascript" src="https://unpkg.com/vue"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@a44583b/index.js"></script> -->
-<script src="index.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@919ee90/index.js"></script>
+<!-- <script src="index.js"></script> -->
 
 </html>
