--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@919ee90/styles.css">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@919ee90/styles.css"> -->
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css" rel="stylesheet"/>
