--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="vizContainer">
   <div id = "checkboxcontainer">
     <h4 class = "checkTitle">Filter by</h4>
-    <h5 class = "checkCat">Type</h5>
+    <h5 class = "checkCat" style="padding-top: 10px">Type</h5>
     <input class="check" type="checkbox" id="restaurant" name="restaurant" value="1">
     <label class="checklabel" for="restaurant"> restaurant</label><br>
 
@@ -46,7 +46,7 @@
     <input class="check" type="checkbox" id="food producer" name="foodproducer" value="1">
     <label class="checklabel" for="foodproducer"> food producer</label><br>
 
-    <h5 class = "checkCat">Times</h5>
+    <h5 class = "checkCat" style="padding-top: 10px">Times</h5>
     <input class="check" type="checkbox" id="Breakfast" name="breakfast" value="1">
     <label class="checklabel" for="breakfast"> breakfast</label><br>
 
@@ -63,7 +63,7 @@
     <label class="checklabel" for="dessert"> dessert</label><br>
     
 
-    <h5 class = "checkCat">Order Options</h5>
+    <h5 class = "checkCat" style="padding-top: 10px">Order Options</h5>
     <input class="check" type="checkbox" id="Dine-In" name="dinein" value="1">
     <label class="checklabel" for="dinein"> dine-in</label><br>
 
@@ -74,7 +74,7 @@
     <label class="checklabel" for="delivery"> delivery</label><br>
 
 
-    <h5 class = "checkCat">Dietary Restrictions</h5>
+    <h5 class = "checkCat" style="padding-top: 10px">Dietary Restrictions</h5>
     <input class="check" type="checkbox" id="Vegan" name="vegan" value="1">
     <label class="checklabel" for="vegan"> vegan</label><br>
 
@@ -88,7 +88,7 @@
     <label class="checklabel" for="kosher"> Kosher</label><br>
 
 
-    <h5 class = "checkCat">Social Relevance</h5>
+    <h5 class = "checkCat" style="padding-top: 10px">Social Relevance</h5>
     <input class="check" type="checkbox" id="BIPOC Run" name="bipocrun" value="1">
     <label class="checklabel" for="bipocrun"> BIPOC run</label><br>
 
