--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ type="text/css"
 <script src="https://d3js.org/d3.v5.js"></script>
 <script type="text/javascript" src="https://unpkg.com/vue"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@2c65bcb/index.js"></script>
-<!-- <script src="index.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/gh/slowfood-usa/SFsnail@2c65bcb/index.js"></script> -->
+<script src="index.js"></script>
 
 </html>
